# proteinet-cafa6

./: .gitignore  README.md  main.py  models.py  pyproject.toml  utils.py
